Various update to reflect the lastest development.

--- a/identity/adoc/02IdentityManagement.adoc
+++ b/identity/adoc/02IdentityManagement.adoc
@@ -1,5 +1,5 @@
 == Identity Management
-Identity management refers to the process of employing emerging technologies
+Identity management refers to the process of employing technologies
 to manage information about the identity of users and control access to company
 resources. The goal of identity management is to improve productivity and
 security while lowering costs associated with managing users and their identities,
@@ -7,12 +7,17 @@ attributes, and credentials.
 
 The goal of the Maritime Clouds Identity Registry is to create a solution that satisfies the most common identification needs for the entire maritime industry on a global scale.
 
-This is not a simple task as any solution must support every possible user scenarios from small leisure sailors to multinational companies. The complexity of this task is why the functionality will be delivered over multiple milestones in the coming years. With the most important things such as support for authentication being implemented first. Additional functionality being added based on user needs in the projects supported by the Maritime Cloud.
+This is not a simple task as any solution must support every possible user scenarios from small leisure sailors to multinational companies. The complexity of this task is why the functionality will be delivered over multiple milestones in the coming years. The most important things such as support for authentication will be implemented first. Additional functionality will be added based on user needs in the projects supported by the Maritime Cloud.
 
 === The Identity Registry
-In most of the documents that describe the Maritime Cloud there is the concept of an Identity Registry. In reality there are numerous systems both internal to the Maritime Cloud as well as external to the Maritime Cloud that makes up the identity registry. Not only are there multiple registries but the interaction with them can also depend on, for example, the type of authentication used. Something like digital authentication certificates can be used offline for authentication, that is, there is no need to contact the identity registry to validate a digital authentication certificate. But if user federation is used, both the Identity registry and possible an external company server needs to be contacted. Hence a better description of the Identity Registry would be probably be an *Identity Platform*.
+In most of the documents that describe the Maritime Cloud there is the concept of an Identity Registry. In reality there are numerous systems both internal to the Maritime Cloud as well as external to the Maritime Cloud that makes up the identity registry. The main components of the Identity Registry are:
 
-Within the scope of the EfficienSea 2 and STM validation projects, the digital identities of actors can be registered in a project Identity Register, unless those actors are already registered in another identity registry, which has been recognized as a part of the Maritime Cloud collaboration (federated identity management). 
+** The Identity Registry API
+** The Identity Broker
+
+The Identity Registry API provides management of entities in the Maritime Cloud and will be described later in this document.
+
+The Identity Broker provides links to trusted Identity Providers, owned by maritime organizations that wish to connect its users to the Maritime Cloud. Within the scope of the EfficienSea 2 and STM validation projects, a special Identity Provider is available where organizations can create users without linking their own Identity Provider.
 
 This will enable the participants in the projects to register actors to validate specific service concepts in testbed trials or utilize the operational services established by the projects, as well as validate the identity management concept of the Maritime Cloud. Beyond the scope of the project, it is foreseen that several identity registers will collaborate to form the global federated Maritime Cloud Identity Registry.
 
@@ -22,7 +27,7 @@ In order to be able to describe some of the concepts we are working with, here i
 Identity management and security is a very complex and comprehensive field. So wherever possible we must limit non-essential functionality. So clearly, there are some maritime entities that should not be a part of the identity registry. Therefore, the Identity Registry should not be:
 
 ** Managing information about entities that does not need to have access rights. For example, route or container information. While information about routes can be accessed by various users and systems. Routes by them self does not need access rights to access other information. It is only users and systems/devices that need access right.
-**	Maintaining information about entities that are not security related. For example, business addresses of users and organizations. Or location information about entities that can be used, for example, for routing messages to the right location.
+** Maintaining information about entities that are not security related. For example, business addresses of users and organizations. Or location information about entities that can be used, for example, for routing messages to the right location.
 
 The main reason for excluding all but non-essential security related information is that it opens up the never ending discussion about what exactly should be maintained in the identity registry. If we make a generalized information store that maintains and provides query capabilities for all kinds of information about users and systems/devices. For example, business addresses, geographical location. We might as well use this functionality for storing other queryable information. For example, maintaining information about routes or cargo. 
 
@@ -38,19 +43,19 @@ In the future a more automated process involving a validation workflow by some o
 
 Once an organization has been registered (and validated), an identity administrator of that organization will be able to create and manage maritime identities that belong to this organization, such as Users, Vessels Devices or Services. This administration is typically done via the Maritime Cloud Portal which is a web based client. For some larger organizations it might make sense to integrate directly via the underlying APIs.
 
-All organizations that are registered in the Maritime Cloud must be registered with a unique >=3 letter alphanumeric id.
+All organizations that are registered in the Maritime Cloud must be registered with a unique MRN.
 
-The id is used in numerous places. For example, all service specifications from a given organization is prefixed by the organization id.
+The MRN is used in numerous places. For example, all service specifications from a given organization includes the organizations MRN.
 
 // Likewise must all MSDL files from a given organization be organized under the a namespace that starts with the organization id. For example, "package dma.mmsi;" In order to allow easy and consistent sharing and import of MSDL files between organizations.
 
 Examples of valid organization ids:
 
-** IMO
-** IALA
-** DMA
-** PortOfRotterdam
-** VTS-Oeresund
+** urn:mrn:mcl:org:IMO
+** urn:mrn:mcl:org:IALA
+** urn:mrn:mcl:org:DMA
+** urn:mrn:mcl:org:PortOfRotterdam
+** urn:mrn:mcl:org:VTS-Oeresund
 
 ==== Vessels
 Vessels describes any floating object used for the carriage of people or goods.
