--- a/identity/adoc/06Authorisation.adoc
+++ b/identity/adoc/06Authorisation.adoc
@@ -25,10 +25,30 @@ When an organization wishes to use a service, the organization will then make an
 
 As an example of how authorization can be done, let us have a look at how it is handled inside the Maritime Cloud Identity Registry. When it comes to authorization, the Identity Registry will have the same information about its users as any other service in the Maritime Cloud.
 
-The Identity Registry currently has three roles:
+The Identity Registry currently has these roles:
 
-* *ROLE_USER* - Grants read access to information about the organization the user belongs to (will be assigned by default to authenticated users).
-* *ROLE_ORG_ADMIN* - Grants read and write access to information about the organization the user belongs to.
-* *ROLE_SITE_ADMIN* - Grants access to administrative functions in the Identity Registry.
+.Identity Registry Roles
+[options="header", cols="<h,8*^"]
+|===
+| Role               | Approve New Org | Edit Own Org | Maintain Org Users | Maintain Org Vessels | Maintain Org Services | Maintain Org Devices | Maintain Org Roles | Delete Org
+| ROLE_SITE_ADMIN    | X               | X            | X                  | X                    | X                     | X                    | X                  | X         
+| ROLE_ORG_ADMIN     |                 | X            | X                  | X                    | X                     | X                    | X                  |           
+| ROLE_ENTITY_ADMIN  |                 |              | X                  | X                    | X                     | X                    |                    |           
+| ROLE_USER_ADMIN    |                 |              | X                  |                      |                       |                      |                    |           
+| ROLE_VESSEL_ADMIN  |                 |              |                    | X                    |                       |                      |                    |           
+| ROLE_SERVICE_ADMIN |                 |              |                    |                      | X                     |                      |                    |           
+| ROLE_DEVICE_ADMIN  |                 |              |                    |                      |                       | X                    |                    |           
+| ROLE_APPROVE_ORG   | X               |              |                    |                      |                       |                      |                    |           
+| ROLE_USER          |                 |              |                    |                      |                       |                      |                    |           
+|===
 
-In this example we will focus on the first two. Let us assume that the Organization wants to grant members of the internal "E-navigation" department administrative rights in the Maritime Cloud Identity Registry. In DMAs Identity Provider setup the department name is automatically added to the "permissions" attribute. So to make this mapping the current DMA administrator sets up a role mapping between the permission "E-navigation" and the role ROLE_ORG_ADMIN. Once this is done, all members of the DMA E-navigation department will have administrative rights for the DMA organization inside the Identity Registry. As noted earlier, these rights only apply inside the Identity Registry. Other services must create a similar setup with mapping of roles and permissions.
+A few things should be noted:
+
+* "Maintain" (as mentioned in the table above) means to be able to create, update and delete.
+* Excluding entities with the role ROLE_SITE_ADMIN, it is not possible for entities to see entities from other organizations.
+* A ROLE_SITE_ADMIN can maintain entities and organizations beyond his own organization.
+* Any entity, regardless of roles, can see all entities from its own organization, though some sensitive information from services is filtered for non-admins.
+* Only a ROLE_SITE_ADMIN can assign ROLE_SITE_ADMIN and ROLE_APPROVE_ORG roles.
+* A ROLE_APPROVE_ORG can create a user for an organization if and only if there is no users for the organization (this is used for creating the first administrative user for an organization).
+
+In this example we will focus on *ROLE_USER* and *ROLE_ORG_ADMIN*. Let us assume that an Organization (DMA) wants to grant members of the internal "E-navigation" department administrative rights in the Maritime Cloud Identity Registry. In DMAs Identity Provider setup the department name is automatically added to the "permissions" attribute. So to make this mapping the current DMA administrator sets up a role mapping between the permission "E-navigation" and the role ROLE_ORG_ADMIN. Once this is done, all members of the DMA E-navigation department will have administrative rights for the DMA organization inside the Identity Registry. As noted earlier, these rights only apply inside the Identity Registry. Other services must create a similar setup with mapping of roles and permissions.
